--- a/projectmanager/templates/projectmanager/create_project.html
+++ b/projectmanager/templates/projectmanager/create_project.html
@@ -12,7 +12,7 @@
     <button type="submit">Save Project</button>
 </form>
 
-<a href="{% url 'dashboard' %}">Back to Dashboard</a>
+<a href="{% url 'project_list' %}">Back to Projects</a>
 </body>
 
 
