--- a/projectmanager/templates/projectmanager/create_task.html
+++ b/projectmanager/templates/projectmanager/create_task.html
@@ -14,6 +14,6 @@
     <button type="submit">Save Task</button>
 </form>
 
-<a href="{% url 'dashboard' %}">Back to Dashboard</a>
+<a href="{% url 'project_dashboard' project.id %}">Back to Dashboard</a>
 </body>
 </html>
