--- a/projectmanager/templates/projectmanager/create_project.html
+++ b/projectmanager/templates/projectmanager/create_project.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Project</title>
-</head>
-<body>
-    <h1>Create New Project</h1>
+{% extends 'projectmanager/base.html' %}
+
+{% block title %}Create Project{% endblock %}
+
+{% block content %}
+<h1>Create New Project</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save Project</button>
 </form>
-
-<a href="{% url 'project_list' %}">Back to Projects</a>
-</body>
-
-
-</html>
+{% endblock %}
