--- a/projectmanager/templates/projectmanager/project_dashboard.html
+++ b/projectmanager/templates/projectmanager/project_dashboard.html
@@ -6,6 +6,21 @@
 <h1>{{ project.title }}</h1>
 <p><strong>Project Goal:</strong> {{ project.goal }}</p>
 
+<h3>Members</h3>
+<ul>
+    {% for member in project.members.all %}
+        <li>{{ member.username }} ({{member.email }})</li>
+    {% endfor %}
+</ul>
+
+
+<h3>Add member</h3>
+<form method="post" action="{% url 'add_member' project.id %}">
+    {% csrf_token %}
+    <input type="email" name="email" placeholder="user@email.com" required>
+    <button type="submit">Add</button>
+</form>
+
 <h2>Switch Project</h2>
 <ul>
     {% for p in projects %}
