--- a/projectmanager/templates/projectmanager/base.html
+++ b/projectmanager/templates/projectmanager/base.html
@@ -98,6 +98,8 @@
         a:hover {
             text-decoration: underline;
         }
+
+        
     </style>
 </head>
 <body>
@@ -106,7 +108,7 @@
     <div class="header-left">
         <!-- Logo -->
         <img src="{% static 'projectmanager/img/web-app-manifest-512x512.png' %}" alt="CourseCrew Logo">
-        <span>CourseCrew</span>
+        <a href="{% url 'project_list' %}" class="logo">CourseCrew</a>
     </div>
 
     <div class="header-right">
