--- a/projectmanager/templates/projectmanager/project_dashboard.html
+++ b/projectmanager/templates/projectmanager/project_dashboard.html
@@ -84,6 +84,14 @@
         {% endfor %}
     </select>
 
+    <select name="priority">
+        <option value="">All Priorities</option>
+        <option value="LOW" {% if request.GET.priority == "LOW" %}selected{% endif %}>Low</option>
+        <option value="MEDIUM" {% if request.GET.priority == "MEDIUM" %}selected{% endif %}>Medium</option>
+        <option value="HIGH" {% if request.GET.priority == "HIGH" %}selected{% endif %}>High</option>
+        <option value="URGENT" {% if request.GET.priority == "URGENT" %}selected{% endif %}>Urgent</option>
+    </select>
+
     <!-- Sort -->
     <select name="sort">
         <option value="">Sort By</option>
@@ -91,6 +99,8 @@
         <option value="deadline_desc" {% if request.GET.sort == "deadline_desc" %}selected{% endif %}>Deadline ↓</option>
         <option value="status" {% if request.GET.sort == "status" %}selected{% endif %}>Status</option>
     </select>
+
+
 
     <button type="submit">Apply</button>
 </form>
@@ -105,6 +115,7 @@
         <th>Assigned To</th>
         <th>Deadline</th>
         <th>Status</th>
+        <th>Priority</th>
         <th></th> <!-- Delete -->
     </tr>
     {% for task in tasks %}
@@ -123,6 +134,19 @@
         </td>
         <td>{{ task.deadline }}</td>
         <td>{{ task.status }}</td>
+        <td>
+            {% if task.priority == "LOW" %}
+        <span style="color:green; font-weight:bold;">Low</span>
+            {% elif task.priority == "MEDIUM" %}
+                <span style="color:orange; font-weight:bold;">Medium</span>
+            {% elif task.priority == "HIGH" %}
+                <span style="color:red; font-weight:bold;">High</span>
+            {% elif task.priority == "URGENT" %}
+                <span style="color:darkred; font-weight:bold;">Urgent</span>
+            {% else %}
+                -
+            {% endif %}
+        </td>
         <td>
             {% if task.assigned_to == request.user %}
             <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
